[project]
name = "cv-filtering-agent"
version = "0.1.0"
description = ""
authors = [{ name = "variphx", email = "variphx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["markitdown[pdf,docx]"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
